--- a/src/app/components/videos/videos.component.scss
+++ b/src/app/components/videos/videos.component.scss
@@ -1,32 +1,66 @@
-// :host {
-//   width: 100%;
-//   height: 100%;
-// }
+.fade-out {
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s;
+}
 
-// .view-box {
-//   display: flex;
-//   flex-direction: column;
-//   width: 100%;
-//   height: 100%;
-//   border: 1px solid #000000;
-//   background: #EEEEEE;
-// }
+video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+}
 
-// .view-content {
-//   padding: 10px;
-//   flex-grow: 1;
-// }
+.view-box {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  height: 400px;
+  border: 1px solid #000000;
+  background: #EEEEEE;
+}
 
-// .btn-container {
-//   padding: 10px 10px 0;
-//   height: 40px;
-//   div {
-//     display: flex;
-//     justify-content: space-between;
-//   }
-// }
+.view-content {
+  position: relative;
+  padding: 10px;
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
 
-// img {
-//   width: 100%;
-//   height: 100%;
-// }
+.btn-container {
+  padding: 10px 10px 0;
+  height: 40px;
+  div {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  /* styles for mobile devices */
+  .view-box {
+    height: 300px;
+    width: 300px;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+  /* styles for tablets */
+  .view-box {
+    width: 600px;
+    height: 600px;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  /* styles for desktop */
+  .view-box {
+    width: 800px;
+    height: 800px;
+  }
+}
